<resources>
    <string name="app_name">Contact Book</string>
    <string name="action_settings">Settings</string>

    // TITLE
    <string name="title_main">Contacts</string>
    <string name="title_settings">Settings</string>
    <string name="title_numpad">Dial number</string>

    // MainActivity
    <string name="main_scan_cancelled">Scan canceled</string>

    // Contact_Create_Activity
    <string name="cont_category_choose">Please choose a category!</string>
    <string name="cont_email_send">send e-mail</string>
    <string name="cont_name_missing">Please enter a name!</string>

    // Contact information
    <string name="contact">Contact</string>
    <string name="name">name</string>
    <string name="number">phone number</string>
    <string name="numbers">Numbers</string>
    <string name="email">e-mail</string>

    //Standard calls
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    //Settings
    <string name="number_categories">number categories</string>
    <string name="email_categories">e-mail categories</string>
    <string name="permissions">Permissions</string>
    <string name="own_number">Own number</string>
    <string name="show_qr">Show QR-code</string>

    //QR
    <string name="scan">Scan QR-code</string>

    //Permissions
    <string name="callphone">Use Phone</string>
    <string name="camera">Use Camera</string>

    //Dialogues
    <string name="item_delete_dialog">Delete this item?</string>
    <string name="introduction_dialog">Would you like to introduce yourself?</string>
    <string name="own_contact_dialog">Delete own contact?</string>

    // Toasts
    <string name="own_cont_deleted">Own Contact was successfully deleted</string>
</resources>
