<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/title_settings"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <Button
            android:id="@+id/settings_number_category_but"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_categories"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/settings_email_category_but"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_categories"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/settings_permissions_but"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/own_number"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <Button
            android:id="@+id/settings_ownnumber_edit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/settings_ownnumber_show"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_qr"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>